namespace FroguesFramework
{
    public static class CharacterAnimatorParameters
    {
        public const string Attack = "Attack";
        public const string WeaponIndex = "Weapon Index";
        public const string Death = "Death";
        public const string Kick = "Kick";
        public const string TakeDamage = "Take Damage";
        
        public const int WeaponlessIndex = 0;
        public const int ShieldIndex = 1;
        public const int SwordIndex = 2;
    }
}